--- a/appontment.html
+++ b/appontment.html
@@ -8,7 +8,8 @@
     <meta name="description" content="Altech – IT Sollutions and Services HTML Template" />
     <meta name="author" content="https://www.themetechmount.com/" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <title> About Lasik</title>
+    <title>Comming Soon</title>
+
     <!-- favicon icon -->
     <link rel="shortcut icon" href="assets/images/logo.jpg" />
 
@@ -29,9 +30,6 @@
 
     <!-- flaticon -->
     <link rel="stylesheet" type="text/css" href="assets/css/flaticon.css" />
-    <!-- REVOLUTION LAYERS STYLES -->
-
-    <link rel="stylesheet" type="text/css" href="assets/revolution/css/rs6.css">
 
     <!-- prettyphoto -->
     <link rel="stylesheet" type="text/css" href="assets/css/prettyPhoto.css">
@@ -45,12 +43,14 @@
     <!-- responsive -->
     <link rel="stylesheet" type="text/css" href="assets/css/responsive.css" />
 
+    <link rel="stylesheet" href="assets/css/appointment.css">
+
 </head>
 
 <body>
 
     <!--page start-->
-    <div class="page">
+    <div class="page" style="display: block;">
 
         <!--header start-->
         <header id="masthead" class="header ttm-header-style-01">
@@ -106,17 +106,17 @@
                                                             <li><a href="squint.html">Squint</a></li>
                                                         </ul>
                                                     </li>
-                                                    <li><a href="commingsoon.html">Retina & Uvea</a></li>
+                                                    <li class="active"><a href="commingsoon.html">Retina & Uvea</a></li>
                                                     <li><a href="#">Contact Lens</a>
                                                         <ul>
 
                                                             <li><a href="contectlens.html">Contact Lens Clinic</a></li>
                                                         </ul>
                                                     </li>
-                                                    <li class="active"><a href="#">Refractive Errors</a>
+                                                    <li><a href="#">Refractive Errors</a>
                                                         <ul>
                                                             <li><a href="prk.html">PRK</a></li>
-                                                            <li class="active"><a href="about_lasik.html">About Lasik</a></li>
+                                                            <li><a href="about_lasik.html">About Lasik</a></li>
                                                             <li><a href="#">Am I Eligible?</a></li>
                                                             <li><a href="faqs.html">Faqs</a></li>
                                                             <li><a href="icl.html">ICL</a></li>
@@ -134,7 +134,7 @@
                                             <li><a href="gallery.html">Gallery</a>
 
                                             </li>
-                                            <li><a href="appontment.html">Book Appointment</a>
+                                            <li class="active"><a href="appontment.html">Book Appointment</a>
 
                                             </li>
                                             <li><a href="contact.html">Contact Us</a>
@@ -153,15 +153,14 @@
 
         </header>
         <!--header end-->
-
-        <div class="ttm-page-title-row">
+        <!-- page-title -->
+        <div class="ttm-page-title-row mb-30">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
                         <div class="title-box text-center">
                             <div class="page-title-heading">
-                                <h1 class="title">
-                                    About Lasik</h1>
+                                <h1 class="title"> Gallery Style 1</h1>
                             </div>
                             <!-- /.page-title-captions -->
                             <div class="breadcrumb-wrapper">
@@ -169,8 +168,7 @@
                                     <a title="Homepage" href="index.html"><i class="ti ti-home"></i>&nbsp;&nbsp;Home</a>
                                 </span>
                                 <span class="ttm-bread-sep">&nbsp; : : &nbsp;</span>
-                                <span> 
-                                    About Lasik</span>
+                                <span> project-style-01</span>
                             </div>
                         </div>
                     </div>
@@ -180,145 +178,80 @@
             </div>
             <!-- /.container -->
         </div>
-
+        <!-- page-title end-->
 
         <!--site-main start-->
         <div class="site-main">
-            <!-- sidebar -->
-            <div class="sidebar ttm-sidebar ttm-bgcolor-white clearfix">
-                <div class="container">
-                    <!-- row -->
-                    <div class="row">
-                        <div class="col-lg-9 content-area order-lg-2">
 
-                            <div class="ttm-service-single-content-area">
-                                <!-- section title -->
-                                <div class="section-title with-desc text-left clearfix">
-                                    <div class="title-header">
-
-                                        <h2 class="title">
-                                            About Laser Surgery</h2>
-                                    </div>
-                                </div>
-                                <!-- section title end -->
-                                <div class="row">
-                                    <div class="col-md-12">
-
-                                        <p class="mb-35 res-991-mb-20">Laser surgery improves vision and gives you complete freedom from spectacles and contact lenses. Laser eye surgery is one of the most popular elective procedure in the world. These procedures use extremely precise
-                                            lasers to reshape the cornea. This is the best way to correct vision, because the shape of the cornea determines the way light enters the eye.
-
-                                        </p>
-                                        <p>Laser eye surgery removes small, very precise amounts of corneal tissue to subtly adjust the way light enters the eye; it is a safe and painless way of transforming vision and takes only minutes.</p>
+            <!-- tab-section -->
+            <div id="booking" class="section">
+                <div class="section-center">
+                    <div class="d-flex justify-content-center">
+                        <div class="container">
+                            <div class="row">
+                                <div class="booking-form">
+                                    <div class="form-header">
+                                        <h1>Book an Appointment</h1>
+                                        <h5 class="text-white mt-20">JETHWA EYE HOSPITAL</h5>
 
                                     </div>
+                                    <form>
+                                        <div class="form-group"> <input class="form-control" type="text" placeholder="Patient Name"> <span class="form-label">Destination</span> </div>
+                                        <div class="form-group"> <input class="form-control" type="tel" placeholder="Enter you Phone"> <span class="form-label">Phone</span> </div>
 
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <div class="form-group"> <input class="form-control" type="email" placeholder="Enter your Email"> <span class="form-label">Email</span> </div>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <div class="form-group"> <input class="form-control" type="text" placeholder="Patient Age"> <span class="form-label">Destination</span> </div>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+
+                                            <textarea class="form-control rounded-0" style="height: 100px;" id="exampleFormControlTextarea1" placeholder="Reason fir appointment" rows="10"></textarea>
+                                        </div>
+
+                                        <div class="row">
+                                            <div class="col-md-6">
+
+                                                <div class="form-group"> <input class="form-control" type="date" required> <span class="form-label">SELECT DATE & TIME</span> </div>
+                                            </div>
+
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <!-- <h6 for="exampleFormControlTextarea1" class="text-white">Morning</h6> -->
+                                                <div class="form-group"> <select class="form-control" required>
+                                                    <option value="" selected hidden>SELECT A TIME SLOT</option>
+                                                    <option><p> 11:20am - 11:40am </p></option>
+                                                    <option>11:40am - 12:00am</option>
+                                                 
+                                                    <option>12:00pm -12:20pm</option>
+                                                    <option>12:20pm - 12:40pm</option>
+                                                    <option>12:40pm - 01:00pm</option>                                                 
+                                                    <option>04:20pm - 04:40pm</option>
+                                                    <option>04:40pm - 05:00pm</option>
+                                                    <option>05:00pm - 05:20pm</option>
+                                                    <option>05:20pm - 05:40pm</option>
+                                                    <option>05:40pm - 06:00pm</option>
+                                                    
+                                                </select> <span class="select-arrow"></span> <span class="form-label">Time Slot</span> </div>
+                                            </div>
+
+                                        </div>
+
+
+                                        <div class="form-btn"> <button class="submit-btn">Book Now</button> </div>
+                                    </form>
                                 </div>
-                                <div class="separator">
-                                    <div class="sep-line mt-35 mb-35 res-991-mtb-20"></div>
-                                </div>
-                                <div class="row">
-                                    <h2>
-                                        Short Sightedness & Long Sightedness
-                                    </h2>
-
-                                    <div class="col-md-12">
-
-                                        <p class="mb-35 res-991-mb-20">Laser eye surgery is commonly used to treat both short-sightedness and long-sightedness. If your cornea is more curved than it should be, it bends (refracts) the light so that it focuses just in front of the cornea.
-                                            This is known as short-sightedness, or myopia.
-
-                                        </p>
-                                        <p>If the cornea is flatter than it should be, the light converges just behind the cornea, causing long-sightedness, or hyperopia.</p>
-
-                                    </div>
-
-                                </div>
-                                <div class="separator">
-                                    <div class="sep-line mt-35 mb-35 res-991-mtb-20"></div>
-                                </div>
-                                <div class="row">
-                                    <h2>Laser Eye Surgery for Astigmatism</h2>
-                                    <div class="col-md-12">
-
-                                        <p class="mb-35 res-991-mb-20">Of course, there are many other conditions that can affect our vision – one of which is astigmatism. You may well have heard that astigmatism is not treatable by laser eye surgery. However, while some cases of astigmatism
-                                            are more complicated than others, Ultimate Vision Lasik Centre has been successfully and safely treating patients with astigmatism for many years.</p>
-
-                                    </div>
-
-                                </div>
-                                <div class="separator">
-                                    <div class="sep-line mt-35 mb-35 res-991-mtb-20"></div>
-                                </div>
-                                <div class="row">
-                                    <h2>Laser Eye Surgery for High Prescriptions</h2>
-                                    <div class="col-md-12">
-
-                                        <p class="mb-35 res-991-mb-20">Many clinics resort to surgically implanted synthetic lenses to treat very high prescriptions. Ultimate Vision Lasik Clinic has pioneered safe methods for using laser eye surgery in such cases. Thanks largely to
-                                            our uniquely comprehensive and accurate assessment tools we can treat very high prescriptions in complete confidence.</p>
-
-                                    </div>
-
-                                </div>
-
                             </div>
-                            <!-- ttm-service-single-content-are end -->
-                        </div>
-                        <div class="col-lg-3 widget-area ">
-                            <aside class="widget widget-nav-menu ">
-                                <ul class="widget-menu ">
-                                    <li><a href="cataract.html ">Cataract & Phaco Surgery</a></li>
-                                    <li><a href="glaucoma.html ">Glaucoma</a></li>
-                                    <li><a href="ectropion.html">Oculoplasty & Squint</a></li>
-                                    <li><a href="commingsoon.html">Retina & Uvea</a></li>
-                                    <li><a href="contectlens.html">Contact Lens</a></li>
-                                    <li class="active"><a href="prk.html">Refractive Errors</a></li>
-                                    <li><a href="keratoconus.html">Coeneal Disease</a></li>
-                                </ul>
-                            </aside>
-                            <aside class="widget widget-text ">
-                                <h3 class="widget-title ">About Us</h3>
-                                <div class="ttm-author-widget ">
-                                    <div class="author-widget_img text-center ">
-                                        <img class="author-img img-fluid " id="jethwaimg" src="assets/images/download.jpg " alt="author image ">
-                                    </div>
-                                    <h4 class="author-name ">DR. GIRISH JETHWA
-
-                                    </h4>
-                                    <p class="author-widget_text ">Passed Master Of Surgery (M. S. ophthalmology) in 1981 from N.H. L. Medical College, Ahmedabad, Private Practitioner in Anand Since 1983.</p>
-                                    <div class="ttm-btn-box pr-20 pb-20 text-center">
-                                        <a class="ttm-btn ttm-btn-size-sm ttm-btn-shape-round ttm-icon-btn-right ttm-btn-bgcolor-skincolor text-white " href="# " title=" ">Read More &nbsp;<i class="ti ti-arrow-circle-right "></i></a>
-                                    </div>
-                                </div>
-                            </aside>
-                            <aside class="widget widget-download ">
-                                <h3 class="widget-title ">Brouchers</h3>
-                                <ul class="download ">
-                                    <li>
-                                        <i class="fa fa-file-pdf-o "></i>
-                                        <a href="# " title="Download ">Download Brochure</a>
-                                    </li>
-                                    <li>
-                                        <i class="fa fa-file-word-o "></i>
-                                        <a href="# " title="Download ">Our ISO Certificate</a>
-                                    </li>
-                                    <li>
-                                        <i class="fa fa-files-o "></i>
-                                        <a href="# " title="Download ">Download.txt</a>
-                                    </li>
-                                </ul>
-                            </aside>
-
                         </div>
                     </div>
-                    <div class="container ">
-                        <!-- separator -->
-
-
-                    </div>
-                    <!-- row end -->
                 </div>
-
             </div>
-            <!-- sidebar end -->
+            <!-- services-slide-section end -->
+
         </div>
         <!--site-main end-->
         <!--footer start-->
@@ -472,12 +405,6 @@
     <script src="assets/js/jquery.prettyPhoto.js "></script>
     <script src="assets/js/numinate.min.js?ver=4.9.3 "></script>
     <script src="assets/js/main.js "></script>
-
-    <!-- Revolution Slider -->
-    <script src="assets/revolution/js/revolution.tools.min.js "></script>
-    <script src="assets/revolution/js/rs6.min.js "></script>
-    <script src="assets/revolution/js/slider.js "></script>
-
 
     <!-- Javascript end-->
 
