--- a/prk.html
+++ b/prk.html
@@ -128,36 +128,14 @@
                                                     </li>
                                                 </ul>
                                             </li>
-                                            <li><a href="#">About</a></li>
-                                            <li><a href="#">Project</a>
-                                                <ul>
-                                                    <li><a href="project-style-01.html">Project Style 1</a></li>
-                                                    <li><a href="project-style-02.html">Project Style 2</a></li>
-                                                    <li><a href="#">Project Single</a>
-                                                        <ul>
-                                                            <li><a href="single-style-01.html">Single Style 1</a></li>
-                                                            <li><a href="single-style-02.html">Single Style 2</a></li>
-                                                            <li><a href="single-style-03.html">Single Style 3</a></li>
-                                                        </ul>
-                                                    </li>
-                                                </ul>
+                                            <li><a href="about.html">About</a></li>
+                                            <li><a href="gallery.html">Gallery</a>
+
                                             </li>
-                                            <li><a href="#">Blog</a>
-                                                <ul>
-                                                    <li><a href="blog.html">Blog Classic</a></li>
-                                                    <li><a href="blog-grid.html">Blog Grid View</a></li>
-                                                    <li><a href="blog-top-image.html">Blog Top Image</a></li>
-                                                    <li><a href="blog-left-image.html">Blog Left Image</a></li>
-                                                    <li><a href="single-blog.html">Blog Single View</a></li>
-                                                </ul>
+                                            <li><a href="appontment.html">Book Appointment</a>
+
                                             </li>
-                                            <li><a href="#">Shop</a>
-                                                <ul>
-                                                    <li><a href="shop.html">Default Shop</a></li>
-                                                    <li><a href="product-details.html">Single Product Details</a></li>
-                                                    <li><a href="cart.html">Cart</a></li>
-                                                    <li><a href="checkout.html">Checkout</a></li>
-                                                </ul>
+                                            <li><a href="contact.html">Contact Us</a>
                                             </li>
                                         </ul>
                                     </nav>
@@ -274,13 +252,13 @@
                                 <h3 class="widget-title ">About Us</h3>
                                 <div class="ttm-author-widget ">
                                     <div class="author-widget_img text-center ">
-                                        <img class="author-img img-fluid " src="assets/images/download.jpg " alt="author image ">
+                                        <img class="author-img img-fluid" id="jethwaimg" src="assets/images/download.jpg " alt="author image">
                                     </div>
                                     <h4 class="author-name ">DR. GIRISH JETHWA
 
                                     </h4>
                                     <p class="author-widget_text ">Passed Master Of Surgery (M. S. ophthalmology) in 1981 from N.H. L. Medical College, Ahmedabad, Private Practitioner in Anand Since 1983.</p>
-                                    <div class="ttm-btn-box pr-20 pb-20 ">
+                                    <div class="ttm-btn-box pr-20 pb-20 text-center">
                                         <a class="ttm-btn ttm-btn-size-sm ttm-btn-shape-round ttm-icon-btn-right ttm-btn-bgcolor-skincolor text-white " href="# " title=" ">Read More &nbsp;<i class="ti ti-arrow-circle-right "></i></a>
                                     </div>
                                 </div>
